--- a/index.html
+++ b/index.html
@@ -30,9 +30,18 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+
+
+      <!-- Step 1: add timeblocks here, add needed classes -->
+
+
+      <!-- textarea, rows and col, save buttons -->
+
+      
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src= "JavaScript.js"></script>
   </body>
 </html>
