--- a/index.html
+++ b/index.html
@@ -19,38 +19,41 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
+
+  <!-- textarea, rows and col, save buttons -->
   <div class="container">
+
     <!-- Time blocks go here -->
-
-
-    <!-- Add time blocks here and needed classes -->
-    <!-- textarea, rows and col, save buttons -->
     <div class="row">
       <div class="col">
-        time 
+        <div class="time-block">
+          time
+        </div>
       </div>
+
+      <!-- textarea-->
       <div class="col">
-        <textarea class="textarea1" rows="5" cols="33">
+        <textarea class="textarea" rows="0" cols="30">
 </textarea>
-  <textarea class="textarea1" rows="5" cols="33">
+        <textarea class="textarea" rows="0" cols="30">
 </textarea>
-  <textarea class="textarea1" rows="5" cols="33">
+        <textarea class="textarea" rows="0" cols="30">
 </textarea>
-  <textarea class="textarea1" rows="5" cols="33">
+        <textarea class="textarea" rows="0" cols="30">
 </textarea>
-  <textarea class="textarea1" rows="5" cols="33">
+        <textarea class="textarea1" rows="0" cols="30">
 </textarea>
-  <textarea class="textarea1" rows="5" cols="33">
+        <textarea class="textarea1" rows="0" cols="30">
 </textarea>
-  <textarea class="textarea1" rows="5" cols="33">
+        <textarea class="textarea1" rows="0" cols="30">
 </textarea>
-  <textarea class="textarea1" rows="5" cols="33">
+        <textarea class="textarea1" rows="0" cols="30">
 </textarea>
       </div>
+      <!-- save buttons -->
       <div class="col">
-        save 
-      </div>
-    </div>
+        <div class="saveBtn">
+      
 
 
   </div>
