row and col updates

--- a/index.html
+++ b/index.html
@@ -21,42 +21,74 @@
   </header>
 
   <!-- textarea, rows and col, save buttons -->
+  <!-- Time blocks go here -->
+
   <div class="container">
-
-    <!-- Time blocks go here -->
     <div class="row">
-      <div class="col">
-        <div class="time-block">
-          time
-        </div>
-      </div>
+      <div class="time-block"> <div class="col">9AM</div></div>
+      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="col"></div>
+      <div class="saveBtn"> <div class="col">save</div></div>
+    </div>
 
-      <!-- textarea-->
-      <div class="col">
-        <textarea class="textarea" rows="0" cols="30">
-</textarea>
-        <textarea class="textarea" rows="0" cols="30">
-</textarea>
-        <textarea class="textarea" rows="0" cols="30">
-</textarea>
-        <textarea class="textarea" rows="0" cols="30">
-</textarea>
-        <textarea class="textarea1" rows="0" cols="30">
-</textarea>
-        <textarea class="textarea1" rows="0" cols="30">
-</textarea>
-        <textarea class="textarea1" rows="0" cols="30">
-</textarea>
-        <textarea class="textarea1" rows="0" cols="30">
-</textarea>
-      </div>
-      <!-- save buttons -->
-      <div class="col">
-        <div class="saveBtn">
-      
+    <div class="row">
+      <div class="time-block"> <div class="col">10AM</div></div>
+      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="col"></div>
+      <div class="saveBtn"> <div class="col">save</div></div>
+    </div>
+
+    <div class="row">
+      <div class="time-block"> <div class="col">11AM</div></div>
+      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="col"></div>
+      <div class="saveBtn"> <div class="col">save</div></div>
+    </div>
+
+    <div class="row">
+      <div class="time-block"> <div class="col">12PM</div></div>
+      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="col"></div>
+      <div class="saveBtn"> <div class="col">save</div></div>
+    </div>
+
+    <div class="row">
+      <div class="time-block"> <div class="col">1PM</div></div>
+      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="col"></div>
+      <div class="saveBtn"> <div class="col">save</div></div>
+    </div>
+
+    <div class="row">
+      <div class="time-block"> <div class="col">2PM</div></div>
+      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="col"></div>
+      <div class="saveBtn"> <div class="col">save</div></div>
+    </div>
 
 
-  </div>
+    <div class="row">
+      <div class="time-block"> <div class="col">3PM</div></div>
+      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="col"></div>
+      <div class="saveBtn"> <div class="col">save</div></div>
+    </div>
+
+
+    <div class="row">
+      <div class="time-block"> <div class="col">4PM</div></div>
+      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="col"></div>
+      <div class="saveBtn"> <div class="col">save</div></div>
+    </div>
+
+
+    <div class="row">
+      <div class="time-block"> <div class="col">5PM</div></div>
+      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="col"></div>
+      <div class="saveBtn"> <div class="col">save</div></div>
+    </div>
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
