--- a/index.html
+++ b/index.html
@@ -25,71 +25,67 @@
 
   <div class="container">
     <div class="row">
-      <div class="time-block"> <div class="col">9AM</div></div>
-      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="time-block"> <div class="col"> time </div></div>
+      <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
-      <div class="saveBtn"> <div class="col">save</div></div>
+      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
-      <div class="time-block"> <div class="col">10AM</div></div>
-      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="time-block"> <div class="col"> time </div></div>
+      <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
-      <div class="saveBtn"> <div class="col">save</div></div>
+      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
-      <div class="time-block"> <div class="col">11AM</div></div>
-      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="time-block"> <div class="col"> time </div></div>
+      <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
-      <div class="saveBtn"> <div class="col">save</div></div>
+      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
-      <div class="time-block"> <div class="col">12PM</div></div>
-      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="time-block"> <div class="col"> time </div></div>
+      <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
-      <div class="saveBtn"> <div class="col">save</div></div>
+      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
-      <div class="time-block"> <div class="col">1PM</div></div>
-      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="time-block"> <div class="col"> time </div></div>
+      <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
-      <div class="saveBtn"> <div class="col">save</div></div>
+      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
-      <div class="time-block"> <div class="col">2PM</div></div>
-      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="time-block"> <div class="col"> time </div></div>
+      <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
-      <div class="saveBtn"> <div class="col">save</div></div>
+      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
-
 
     <div class="row">
-      <div class="time-block"> <div class="col">3PM</div></div>
-      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="time-block"> <div class="col"> time </div></div>
+      <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
-      <div class="saveBtn"> <div class="col">save</div></div>
+      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
-
 
     <div class="row">
-      <div class="time-block"> <div class="col">4PM</div></div>
-      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="time-block"> <div class="col"> time </div></div>
+      <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
-      <div class="saveBtn"> <div class="col">save</div></div>
+      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
-
 
     <div class="row">
-      <div class="time-block"> <div class="col">5PM</div></div>
-      <textarea class="textarea" rows="" cols=""></textarea>
+      <div class="time-block"> <div class="col"> time </div></div>
+      <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
-      <div class="saveBtn"> <div class="col">save</div></div>
+      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
-
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
