--- a/index.html
+++ b/index.html
@@ -25,63 +25,63 @@
 
   <div class="container">
     <div class="row">
-      <div class="time-block"> <div class="col"> time </div></div>
+      <div class="time-block"> <div class="col" id="9"> 09:00PM</div></div>
       <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
-      <div class="time-block"> <div class="col"> time </div></div>
+      <div class="time-block"> <div class="col" id="10"> 10:00PM</div></div>
       <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
-      <div class="time-block"> <div class="col"> time </div></div>
+      <div class="time-block"> <div class="col" id="11"> 11:00PM</div></div>
       <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
-      <div class="time-block"> <div class="col"> time </div></div>
+      <div class="time-block"> <div class="col" id="12"> 12:00PM</div></div>
       <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
-      <div class="time-block"> <div class="col"> time </div></div>
+      <div class="time-block"> <div class="col" id="1"> 13:00PM</div></div>
       <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
-      <div class="time-block"> <div class="col"> time </div></div>
+      <div class="time-block"> <div class="col" id="2"> 14:00PM</div></div>
       <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
-      <div class="time-block"> <div class="col"> time </div></div>
+      <div class="time-block"> <div class="col" id="3"> 15:00PM</div></div>
       <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
-      <div class="time-block"> <div class="col"> time </div></div>
+      <div class="time-block"> <div class="col" id="4"> 16:00PM</div></div>
       <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
-      <div class="time-block"> <div class="col"> time </div></div>
+      <div class="time-block"> <div class="col" id="5"> 17:00PM</div></div>
       <textarea class="textarea" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
