--- a/index.html
+++ b/index.html
@@ -26,63 +26,63 @@
   <div class="container">
     <div class="row">
       <div class="time-block"> <div class="col"> 09:00AM </div></div>
-      <textarea class="textarea col-10" id="9" rows="" cols="50"></textarea>
+      <textarea class="textarea" id="9" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
       <div class="time-block"> <div class="col" id="10"> 10:00AM </div></div>
-      <textarea class="textarea col-10" id="10" rows="" cols="50"></textarea>
+      <textarea class="textarea" id="10" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
       <div class="time-block"> <div class="col" id="11"> 11:00AM </div></div>
-      <textarea class="textarea col-10" id="11" rows="" cols="50"></textarea>
+      <textarea class="textarea" id="11" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
       <div class="time-block"> <div class="col" id="12"> 12:00PM </div></div>
-      <textarea class="textarea col-10" id="12" rows="" cols="50"></textarea>
+      <textarea class="textarea" id="12" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
       <div class="time-block"> <div class="col"> 01:00PM </div></div>
-      <textarea class="textarea col-10" id="13" rows="" cols="50"></textarea>
+      <textarea class="textarea" id="13" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
       <div class="time-block"> <div class="col" id="2"> 02:00PM </div></div>
-      <textarea class="textarea col-10" id="14" rows="" cols="50"></textarea>
+      <textarea class="textarea" id="14" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
       <div class="time-block"> <div class="col" id="3"> 03:00PM </div></div>
-      <textarea class="textarea col-10" id="15" rows="" cols=""></textarea>
+      <textarea class="textarea" id="15" rows="" cols=""></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
       <div class="time-block"> <div class="col" id="4"> 04:00PM </div></div>
-      <textarea class="textarea col-10" id="16" rows="" cols="50"></textarea>
+      <textarea class="textarea" id="16" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
       <div class="time-block"> <div class="col" id="5"> 05:00PM </div></div>
-      <textarea class="textarea col-10" id="17" rows="" cols="50"></textarea>
+      <textarea class="textarea" id="17" rows="" cols="50"></textarea>
       <div class="col"></div>
       <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
     </div>
