--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="hour"> <div class="col" id="2"> 02:00PM </div></div>
       <textarea class="textarea" id="14" rows="" cols="20"></textarea>
       <div class="col"></div>
-      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
+      <div class="saveBtn"> <div class="col-10"><i class="fas fa-lock"></i></div></div>
     </div>
 
     <div class="row">
