textarea updates to correct sizing issues

--- a/index.html
+++ b/index.html
@@ -24,72 +24,55 @@
   <!-- Time blocks go here -->
 
   <div class="container">
-    <div class="row">
-      <div class="hour" id="work9"> <div class="col"> 09:00AM </div></div>
-      <textarea class="textarea" id="9" rows="" cols="20"></textarea>
-      <div class="col"></div>
-      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
-    </div>
-
-    <div class="row">
-      <div class="hour" id="work10"> <div class="col"> 10:00AM </div></div>
-      <textarea class="textarea" id="10" rows="" cols="20"></textarea>
-      <div class="col"></div>
-      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
-    </div>
-
-    <div class="row">
-      <div class="hour" id="work11"> <div class="col"> 11:00AM </div></div>
-      <textarea class="textarea" id="11" rows="" cols="20"></textarea>
-      <div class="col"></div>
-      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
-    </div>
-
-    <div class="row">
-      <div class="hour" id="work12"> <div class="col"> 12:00PM </div></div>
-      <textarea class="textarea" id="12" rows="" cols="20"></textarea>
-      <div class="col"></div>
-      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
-    </div>
-
-    <div class="row">
-      <div class="hour"  id="work13"> <div class="col"> 01:00PM </div></div>
-      <textarea class="textarea" id="13" rows="" cols="20"></textarea>
-      <div class="col"></div>
-      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
-    </div>
-
-    <div class="row">
-      <div class="hour"  id="work14"> <div class="col"> 02:00PM </div></div>
-      <textarea class="textarea" id="14" rows="" cols="20"></textarea>
-      <div class="col"></div>
-      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
-    </div>
-
-    <div class="row">
-      <div class="hour" id="work15"> <div class="col"> 03:00PM </div></div>
-      <textarea class="textarea" id="15" rows="" cols="20"></textarea>
-      <div class="col"></div>
-      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
-    </div>
-
-    <div class="row">
-      <div class="hour" id="work16"> <div class="col"> 04:00PM </div></div>
-      <textarea class="textarea" id="16" rows="" cols="20"></textarea>
-      <div class="col"></div>
-      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
-    </div>
-
-    <div class="row">
-      <div class="hour" id="work17"> <div class="col"> 05:00PM </div></div>
-      <textarea class="textarea" id="17" rows="" cols="20"></textarea>
-      <div class="col"></div>
-      <div class="saveBtn"> <div class="col"><i class="fas fa-lock"></i></div></div>
-    </div>
-
+    <section class="row time-block">
+      <h4 class="col-2 hour">9 AM</h4>
+      <input class="col-8 description" id="9" />
+      <button class="col-2 saveBtn"><i class="fas fa-lock"></i></button>
+    </section>
+    <section class="row time-block">
+      <h4 class="col-2 hour">10 AM</h4>
+      <input class="col-8 description" id="10" />
+      <button class="col-2 saveBtn"><i class="fas fa-lock"></i></button>
+    </section>
+    <section class="row time-block">
+      <h4 class="col-2 hour">11 AM</h4>
+      <input class="col-8 description" id="11" />
+      <button class="col-2 saveBtn"><i class="fas fa-lock"></i></button>
+    </section>
+    <section class="row time-block">
+      <h4 class="col-2 hour">12 AM</h4>
+      <input class="col-8 description" id="12" />
+      <button class="col-2 saveBtn"><i class="fas fa-lock"></i></button>
+    </section>
+    <section class="row time-block">
+      <h4 class="col-2 hour">1 PM</h4>
+      <input class="col-8 description" id="13" />
+      <button class="col-2 saveBtn"><i class="fas fa-lock"></i></button>
+    </section>
+    <section class="row time-block">
+      <h4 class="col-2 hour">2 PM</h4>
+      <input class="col-8 description" id="14" />
+      <button class="col-2 saveBtn"><i class="fas fa-lock"></i></button>
+    </section>
+    <section class="row time-block">
+      <h4 class="col-2 hour">3 PM</h4>
+      <input class="col-8 description" id="15" />
+      <button class="col-2 saveBtn"><i class="fas fa-lock"></i></button>
+    </section>
+    <section class="row time-block">
+      <h4 class="col-2 hour">4 PM</h4>
+      <input class="col-8 description" id="16" />
+      <button class="col-2 saveBtn"><i class="fas fa-lock"></i></button>
+    </section>
+    <section class="row time-block">
+      <h4 class="col-2 hour">5 PM</h4>
+      <input class="col-8 description" id="17" />
+      <button class="col-2 saveBtn"><i class="fas fa-lock"></i></button>
+    </section>
+  </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script src="JavaScript.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
